@@ -25,6 +25,7 @@ Contributors
 * Chris Hafey <chafey@gmail.com>, for suggesting many features and
   improvements, the Windows service and Windows installer.
 * Manabu Tokunaga <manabu@lury.net>, for the Windows service.
+* Vincent Kersten <vincent1234567@gmail.com>, for DICOMDIR in the GUI.
 
 
 Thanks also to all the contributors active in our Google Group:
